Market insight detiail fill in2

--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
         <div
           class="text-2xl lg:text-4xl w-full h-full lg:grid grid-cols-2 auto-cols-fr auto-rows-4fr"
         >
-          <article class="w-4/5 place-self-center	">
+          <article class="w-4/5 place-self-center">
             <p class="">
               <span class="font-bold">Adebouge Holdings</span> is a
               research-driven tech company which addresses youth unemployment in
               emerging economies through unique business as a service approach
               and enabling impact investing projects through collaboration with
-              strategic U.S.-Nigeria partnerships.
+              strategic U.S Nigeria partnerships.
             </p>
           </article>
           <div
             class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
           ></div>
-          <article class="order-4 w-4/5 place-self-center	">
+          <article class="order-4 w-4/5 place-self-center">
             <p class="">
               We work with partners in the target market to reposition and
               revitalize local high potential businesses by enhancing
@@ -97,16 +97,16 @@
         </div>
       </div>
 
-      <div class="">
-        <iframe
-          class="sm:mx[10%] my-[1vh] m-auto aspect-video block w-4/5 lg:w-1/2 overflow-hidden"
-          src="https://www.youtube-nocookie.com/embed/WO2yLOpJaK0?si=7rfCNlXpM3OpAGiI"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
+      <iframe
+        class="sm:mx[10%] my-[1vh] m-auto aspect-video block w-4/5 lg:w-1/2 overflow-hidden"
+        src="https://www.youtube-nocookie.com/embed/WO2yLOpJaK0?si=7rfCNlXpM3OpAGiI"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
 
+      <div class="flex flex-col items-center justify-betweeen">
         <article
           id="insight-article"
           class="w-4/5 m-auto lg:w-1/2 text-regular lg:text-2xl"
@@ -115,15 +115,17 @@
             <h3 class="border-b-[1px] border-white capitalize">
               Market Insights
             </h3>
-            <h4>from Permacrisis</h4>
+            <h4 class="italic opacity-50 profile-heading">from Permacrisis</h4>
           </header>
           <p>
             The world went through, covid demand, and the supply shock, then
             demand shocks, the shocks and aftershocks associated with the
             ongoing war in Ukraine, Gaza, and countless of other conflicts major
             zones around the world but still was able to tame inflation to
-            around 3%, unemployment in the US around 3.7% - thanks to AI._Gordon
-            Brown, former Prime Minister of Britain.
+            around 3%, unemployment in the US around 3.7% - thanks to AI.
+            <span class="text-base opacity-50"
+              >Gordon Brown, former Prime Minister of Britain.</span
+            >
           </p>
           <p>
             The world is about to experience productivity like nothing before.
@@ -132,30 +134,38 @@
             around it. The Markets agree, Satya Nadella, Sam Altman, Mark
             Zuckerberg, Jeff Bezos, Tim Cook, Elon Musk, Srini Koushik etc. have
             gone ahead to prioritize integrating AI into various aspects of
-            their business operations accordingly._ Micael Spence NYU Stern.
+            their business operations accordingly.
+            <span class="text-base opacity-50">Micael Spence NYU Stern.</span>
           </p>
         </article>
-      </div>
 
-      <div class="w-4/5 lg:w-1/2 text-regular lg:text-2xl m-8 border-white">
-        <header>
-          <h3 class="border-b-[1px] border-white capitalize">Bayo Adebogun</h3>
-          <h4 class="profile-heading">Research, Technology, jobs</h4>
-        </header>
-        <p>
-          Bayo, our co-founder, was born and educated in Nigeria, and the US,
-          brings unique leadership experience from Nigerian education,
-          government, and tech sectors. With a decade managing Public-Private
-          Partnerships and 20+ years in global enterprise project management,
-          Bayo, a certified PMP, co-founded multiple companies. Actively engaged
-          with University of Chicago Booth entrepreneurship resources, he
-          participates in events by the Polsky Center, Rustandy Center, and
-          Alumni series. Bayo's philanthropic efforts include educational
-          funding through Adebouge Holding collaboration, mentorship for the
-          University of Kansas, and advocacy on economic matters with Eldridge
-          Investments Group. Residing in Sugar Land, Texas, he enjoys outdoor
-          activities with his family of wife with 2 kids.
-        </p>
+        <section
+          class="w-4/5 lg:w-1/2 text-regular lg:text-2xl m-8 border-white"
+        >
+          <header>
+            <h3 class="border-b-[1px] border-white capitalize">
+              Bayo Adebogun
+            </h3>
+            <h4 class="italic opacity-50 profile-heading">
+              Research, Technology, jobs
+            </h4>
+          </header>
+          <p>
+            Bayo Adebogun, cofounder of Adebouge Holdings was educated in
+            Nigeria and the US, brings unique leadership experience from
+            Nigerian education, government, and tech sectors. With a decade
+            managing Public-Private Partnerships and 20+ years in global
+            enterprise project management, Bayo, a certified PMP, co-founded
+            multiple companies. Actively engaged with University of Chicago
+            Booth entrepreneurship resources, he participates in events by the
+            Polsky Center, Rustandy Center, and Alumni series. Bayo's
+            philanthropic efforts include educational funding through Adebouge
+            Holdings collaboration, mentorship for the University of Kansas, and
+            advocacy on economic matters in emerging markets and technologies
+            with Eldridge Investments Group. He enjoys outdoor activities with
+            his family.
+          </p>
+        </section>
       </div>
     </main>
 
