Market insight detiail fill in

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div
           class="text-2xl lg:text-4xl w-full h-full lg:grid grid-cols-2 auto-cols-fr auto-rows-4fr"
         >
-          <article class="w-4/5 place-self-center">
+          <article class="w-4/5 place-self-center mx-auto">
             <p class="">
               <span class="font-bold">Adebouge Holdings</span> is a
               research-driven tech company which addresses youth unemployment in
@@ -83,7 +83,7 @@
           <div
             class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
           ></div>
-          <article class="order-4 w-4/5 place-self-center">
+          <article class="mx-auto order-4 w-4/5 place-self-center">
             <p class="">
               We work with partners in the target market to reposition and
               revitalize local high potential businesses by enhancing
