Market insight detiail fill in3

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <span class="font-bold">Adebouge Holdings</span> is a
               research-driven tech company which addresses youth unemployment in
               emerging economies through unique business as a service approach
-              and enabling impact investing projects through collaboration with
+              and enabling impact investing projects through collaboration that
               strategic U.S Nigeria partnerships.
             </p>
           </article>
@@ -87,7 +87,7 @@
             <p class="">
               We work with partners in the target market to reposition and
               revitalize local high potential businesses by enhancing
-              operational capabilities and foster profitability. Our aim is to
+              operational capabilities and fostering profitability. Our aim is to
               transform small ventures into potential global multibillion-dollar
               organizations that create sustainable job opportunities for young
               people.
