--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <main
       class="flex flex-col items-center justify-betweeen gap-64 text-2xl lg:text-4xl"
     >
-      <div class="w-full h-screen flex items-center justify-center">
+      <div class="w-full lg:h-screen flex items-center justify-center">
         <div
-          class="text-2xl lg:text-4xl w-full h-full lg:grid grid-cols-2fr auto-cols-fr auto-rows-4fr"
+          class="text-2xl lg:text-4xl w-full lg:h-screen lg:grid grid-cols-2fr auto-cols-fr auto-rows-4fr"
         >
           <article class="w-4/5 place-self-center mx-auto">
             <p class="py-10">
@@ -83,7 +83,7 @@
           <div
             class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
           ></div>
-          <article class="mx-auto order-4 w-4/5 place-self-center">
+          <article class="mx-auto order-3 md::order-4 w-4/5 place-self-center">
             <p class="py-10">
               We work with partners in the target market to reposition and
               revitalize local high potential businesses by enhancing
@@ -93,12 +93,12 @@
               people.
             </p>
           </article>
-          <div class="order-3 order-2 bg-work bg-top aspect-video"></div>
+          <div class="order-4 md:order-3 order-2 bg-work bg-top aspect-video"></div>
         </div>
       </div>
 
       <iframe
-        class="sm:mx[10%] my-[1vh] m-auto aspect-video block w-4/5 lg:w-1/2 overflow-hidden"
+        class="sm:mx[10%] mt-[10vh] m-auto aspect-video block w-4/5 lg:w-1/2 overflow-hidden"
         src="https://www.youtube-nocookie.com/embed/WO2yLOpJaK0?si=7rfCNlXpM3OpAGiI"
         title="YouTube video player"
         frameborder="0"
