--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               work: "linear-gradient(to   top, #040404a0 , #040404 99%), url(./assets/img/work.jpg)",
             },
             gridAutoRows: {
-              '2fr': "2rem",
+              '2fr': 'minmax(0, 2fr)',
             },
           },
         },
@@ -67,9 +67,9 @@
     <main
       class="flex flex-col items-center justify-betweeen gap-64 text-2xl lg:text-4xl"
     >
-      <div class="w-full lg:h-screen flex items-center justify-center">
+      <div class="w-full lg:h-screen flex items-center justify-center overflow-hidden">
         <div
-          class="text-2xl lg:text-4xl w-full lg:h-screen lg:grid grid-cols-2fr auto-cols-fr auto-rows-4fr"
+          class="text-2xl lg:text-4xl w-full lg:h-screen lg:grid grid-cols-2fr auto-cols-fr auto-rows-2fr"
         >
           <article class="w-4/5 place-self-center mx-auto">
             <p class="py-10">
@@ -83,7 +83,7 @@
           <div
             class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
           ></div>
-          <article class="mx-auto order-3 md::order-4 w-4/5 place-self-center">
+          <article class="mx-auto order-3 lg:order-4 w-4/5 place-self-center">
             <p class="py-10">
               We work with partners in the target market to reposition and
               revitalize local high potential businesses by enhancing
@@ -93,7 +93,7 @@
               people.
             </p>
           </article>
-          <div class="order-4 md:order-3 order-2 bg-work bg-top aspect-video"></div>
+          <div class="order-4 lg:order-3 order-2 bg-work bg-no-repeat bg-cover bg-top aspect-video"></div>
         </div>
       </div>
 
