remove team member [paragraph spacing fix]

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </head>
 
   <body class="antialiased sm:subpixel-antialiased md:antialiased">
-    <nav class="nav sticky top-0 w-screen left-0">
+    <nav class="nav">
       <h1 class="heading-primary">adebouge holdings</h1>
     </nav>
 
@@ -69,19 +69,19 @@
     >
       <div class="w-full lg:h-screen flex items-center justify-center overflow-hidden">
         <div
-          class="text-2xl lg:text-4xl w-full lg:h-screen lg:grid grid-cols-2fr auto-cols-fr auto-rows-2fr"
+          class="text-2xl lg:text-3xl w-full lg:h-screen grid grid-cols-1 lg:grid-cols-2  auto-cols-fr auto-rows-2fr"
         >
           <article class="w-4/5 place-self-center mx-auto">
             <p class="py-10">
               <span class="font-bold">Adebouge Holdings</span> is a
-              research-driven tech company which addresses youth unemployment in
+              research-driven tech company that addresses youth unemployment in
               emerging economies through unique business as a service approach
               and enabling impact investing projects through collaboration that
               strategic U.S Nigeria partnerships.
             </p>
           </article>
           <div
-            class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video"
+            class="order-2 bg-partnership bg-no-repeat bg-cover bg-center aspect-video overflow-hidden"
           ></div>
           <article class="mx-auto order-3 lg:order-4 w-4/5 place-self-center">
             <p class="py-10">
@@ -93,7 +93,7 @@
               people.
             </p>
           </article>
-          <div class="order-4 lg:order-3 order-2 bg-work bg-no-repeat bg-cover bg-top aspect-video"></div>
+          <div class="order-4 lg:order-3  bg-work bg-no-repeat bg-cover bg-top aspect-video"></div>
         </div>
       </div>
 
